[package]
name = "python-input"
version = "0.6.0"
authors = ["Max Larsson <maxslarsson@gmail.com>"]
edition = "2018"
description = "A rust implementation of the python 'input' function."
repository = "https://github.com/maxslarsson/python-input"
keywords = ["python", "user", "input", "rust", "implementation"]
license = "MIT License"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
